# LLM-KV--Cache-compress

./: .gitignore  ACKNOWLEDGMENTS.md  CITATION.cff  DEPLOYMENTS.md  README.md  compare_kakeya_vs_turboquant.py  gemma4_inference_test.py  kakeya_benchmark.py  kakeya_extrapolate.py  kakeya_kv_codec.py  run_all_benchmarks.sh  run_comparison_matrix.sh  run_no_vbesi_sprint.sh  run_no_vbesi_sprint_pt2.sh  smoke_test.py
benchmarks/: ablation_2x2x2.py  ablation_3d_bw_vr_bs.py  ablation_long_ctx_shared.py  ablation_parity_check.py  ablation_q_precondition.py  aggregate_deff_ablation.py  aggregate_k_blocksize_ablation.py  aggregate_k_crosslayer_ablation.py  aggregate_kakeyaturbo_matrix.py  aggregate_v1_2_and_compare.py  besi_rotation_oracle.py  bridges_abc_head_to_head.py  bridges_b2_vs_tq_compression_sweep.py  bridges_b2_vs_tq_compression_sweep_gpu.py  bridges_b2_vs_tq_vllm_ppl.py  calibrate_datamatched_lloyd_max.py  calibration_utils.py  compare_v1_2_vs_turbo3.py  cross_layer_v_pool_diagnostic.py  depth_compounding_test.py  e2e_ppl_pre_rope.py  e2e_ppl_rope_aware.py  e2e_ppl_validation.py  e2e_ppl_validation_vllm.py  e2e_ppl_validation_vllm_ablation.py  e2e_ppl_validation_vllm_full.py  e2e_ppl_validation_vllm_snapshot.py  e2e_ppl_validation_vllm_snapshot_qwen3.py  e8_latency_benchmark.py  e8_parity_and_smoke.py  extract_iso_ppl_table.py  extrapolate_v1_2_b2_vs_turbo3.py  extrapolate_v_channel.py  frozen_parity.json  gap_phase1_5_engine_baseline.py  gap_phase2_noise_sensitivity.py  gap_phase3_per_layer_vllm.py  gap_phase4_residual_magnitude.py  k_besi_qprecond_oracle.py  k_riemann_besi_codec.py  (+46 more)
benchmarks/dsv4_stage075/: README.md  dsv4_weight_loader.py  run_stage075_n8.py  run_stage075_qsweep.py  run_stage075_real_weights.py
benchmarks/dsv4_stage0_5/: dsv4_kv_generator.py  run_dsv4_stage0_5.py  run_dsv4_synthetic.py  test_dsv4_generator.py
benchmarks/dsv4_stage1/: rigorous_eval_dsv4.py  test_dsv4_snapshot_hook.py
benchmarks/hf_cache_demo/: run_hf_cache_benchmark.py
benchmarks/vLLMLog/: MANIFEST.sha256  README.md
blog/: 2026-04-kakeyalattice-v1-5.md
demos/hf_llama_kakeyalattice/: BLOG.md  Dockerfile  HF_SPACE_DEPLOY.md  PYPI_RELEASE_CHECKLIST.md  README.md  SPACE_README.md  app.py  requirements.txt
docs/: GEO_AUDIT_2026-04-27.md  faq.md
docs/announce/: awesome_submissions.md  discovery_runbook.md  hf_space_backlinks.md  hn_post.md  reddit_localllama.md  titles.md  twitter_thread.md  vllm_integration_issue.md
kakeyalattice/: README.md  pyproject.toml
kakeyalattice/python/kakeyalattice/: __init__.py  ablation_codecs.py  lattice_codebooks.py  spherical_codebooks.py
kakeyalattice/python/kakeyalattice/hf/: __init__.py  cache.py  test_cache.py
kakeyaturbo/: .gitignore  Cargo.toml  README.md
kakeyaturbo-py/: Cargo.toml  pyproject.toml
kakeyaturbo-py/python/kakeyaturbo_py/: __init__.py  bridge_a_guth_katz.py  bridge_b2_d4_tq_style.py  bridge_b_nested_lattice.py  bridge_c_non_gaussian.py  gpu_encode.py  gpu_polypart.py  gpu_skeleton.py  lattice_codebooks.py  reference_torch.py  triton_kernels.py  v1_4_kakeya_zamir_lattice_gpu.py  v1_5_kakeya_zamir_e8_gpu.py
kakeyaturbo-py/src/: lib.rs
kakeyaturbo-py/tests/: bench_pyo3_vs_cli.py  bench_triton_decode.py  bench_triton_vs_torch.py  test_full_recipe_parity.py  test_roundtrip_cli_parity.py  test_torch_reference_parity.py  test_triton_decode_parity.py  test_triton_phase_b_parity.py
kakeyaturbo/src/: besicovitch.rs  codec.rs  distortion.rs  kmeans.rs  lib.rs  pca.rs  quantize.rs  skeleton.rs  wht.rs
kakeyaturbo/tests/: integration.rs  proptests.rs
paper/: kakeyaturbo.aux  kakeyaturbo.out
paper/arxiv/: kakeyaturbo.aux  kakeyaturbo.out  kakeyaturbo.tex
reports/: CROSS_MODEL.md  SPRINT_CLOSEOUT.md  STANDARD.md  bench_16k.json  bench_32k.json  extrapolation_from_16k.json  extrapolation_from_32k.json  quick.json
reports/compare/: SUMMARY.md
reports/deepseek_r1_distill_qwen_1_5b/: REPORT.md  bench_2048.json  bench_4096.json  bench_8192.json  extrapolation.json
reports/gemma4_e2b/: REPORT.md  bench_2048.json  bench_4096.json  bench_8192.json  extrapolation.json
reports/glm_edge_1_5b/: REPORT.md  bench_2048.json  bench_4096.json  bench_8192.json  extrapolation.json
reports/glm_edge_4b/: REPORT.md  bench_2048.json  bench_4096.json  bench_8192.json  extrapolation.json
reports/k_blocksize_ablation/: DECISION.md  SUMMARY.md  global_summary.json
reports/k_crosslayer_ablation/: SUMMARY.md  global_summary.json
reports/k_deff_outlier_ablation/: DECISION.md
reports/paper/: README.md  kakeyalattice.tex
reports/pca_ablation/: ABLATION_REPORT.md  global_summary.json
reports/qwen2_5_0_5b/: REPORT.md  bench_2048.json  bench_4096.json  bench_8192.json  extrapolation.json
reports/qwen3_0_6b/: REPORT.md  bench_2048.json  bench_4096.json  bench_8192.json  extrapolation.json
reports/real_kakeyaturbo/: FULL_REAL_BENCHMARK.json  FULL_REAL_BENCHMARK.md  prefill_cost_probe.json
reports/real_kakeyaturbo_v1_2/: V1_2_vs_TURBO3.json  V1_2_vs_TURBO3.md  V1_vs_V1_2_COMPARE.json  V1_vs_V1_2_COMPARE.md
reports/smollm2_1_7b/: REPORT.md  bench_2048.json  bench_4096.json  bench_8192.json  extrapolation.json
reports/v1_3_ppl/: FINDINGS.md  MECHANISM_IN_FORWARD_VS_SNAPSHOT.md  v1_3_ppl_prerope_kv_b3_randomized_fp16_sk0_sv1.json
reports/v1_3_revival/: B0_bare_rsvd_b3_prerope_kv_b3_randomized_fp16_sk0_sv0.json  B1_rsvd_b3_full_prerope_kv_b3_randomized_fp16_sk0_sv0.json  B2_rsvd_b3_Vbesi_prerope_kv_b3_randomized_fp16_sk0_sv0.json  B3_rsvd_b3_outlier_Vbesi_prerope_kv_b3_randomized_fp16_sk0_sv0.json  C1_rsvd_b3_outlier_T15_prerope_kv_b3_randomized_fp16_sk0_sv0.json  (+9 more)
scripts/: compute_ratio_vrsvd_sprint.py
vllm_backend/: pyproject.toml
vllm_backend/kakeya_v1_3_ppl/: __init__.py  backend.py  calibration.py  config.py  impl.py  plugin.py  registration.py  snapshot_hook.py  spec.py
vllm_backend/kakeya_v1_3_ppl/tests/: test_boundary_skip.py  test_config_and_spec.py  test_phase_b2a_calibration.py  test_phase_b_end_to_end.py
vllm_backend/kakeya_v1_4_snapshot/: __init__.py  dsv4_snapshot_hook.py  plugin.py  snapshot_hook.py
(+5293 files in other folders)
