[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kakeyalattice"
version = "1.5.0"
description = "KakeyaLattice reference Python codec for LLM KV-cache compression. Hadamard-rotated, per-vector-qmax nested-lattice quantisation: v1.4 D4 (V14KakeyaZamirLatticeGPU) and v1.5 E8 (V15KakeyaZamirE8GPU)."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
]

[tool.setuptools.packages.find]
where = ["python"]
include = ["kakeyalattice*"]
