[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kakeyaturbo_py"
version = "1.4.0"
description = "v1.4 KakeyaLattice reference Python codec (Zamir-Feder D4 nested lattice + TurboQuant engineering stack) for LLM KV-cache compression"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
]

[tool.setuptools.packages.find]
where = ["python"]
include = ["kakeyaturbo_py*"]
