[package]
name = "kakeyaturbo"
version = "0.1.0"
edition = "2021"
description = "Monomorphic RDO-based vector stream compressor (Kakeya + TurboQuant unified under rate-distortion framework)"
license = "Apache-2.0"
rust-version = "1.75"

[dependencies]
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
half = { version = "2.4", default-features = false, features = ["std"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng", "small_rng"] }

[dev-dependencies]
approx = "0.5"
proptest = { version = "=1.5.0", default-features = false, features = ["std", "bit-set"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.test]
opt-level = 2

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
# 0-cost abstraction trait methods are fine to inline aggressively
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
