[package]
name = "kakeyaturbo"
version = "0.1.0"
edition = "2021"
description = "Monomorphic RDO-based vector stream compressor (Kakeya + TurboQuant unified under rate-distortion framework)"
license = "Apache-2.0"
rust-version = "1.75"

[dependencies]
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
half = { version = "2.4", default-features = false, features = ["std"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng", "small_rng"] }

[dev-dependencies]
approx = "0.5"
proptest = { version = "=1.5.0", default-features = false, features = ["std", "bit-set"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.test]
opt-level = 2

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious   = { level = "deny", priority = -1 }
perf         = { level = "warn", priority = -1 }
complexity   = { level = "warn", priority = -1 }
style        = { level = "warn", priority = -1 }
# Opt-outs: cast-precision noise is unavoidable in numerical code.
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
