[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kakeya_v1_4_snapshot"
version = "1.4.0"
description = "v1.4 KakeyaLattice snapshot harness — Attention monkey-patches for post-QK/V-norm pre-RoPE K/V capture + replace in vLLM prefill"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["kakeya_v1_4_snapshot*"]

[project.entry-points."vllm.general_plugins"]
# vLLM loads this in every process (parent + engine-core subprocess).
# Gate: env var KAKEYA_SNAPSHOT_QWEN3=1 (name retained for harness
# backward-compat).  No-op without the env var.
kakeya_v1_4_snapshot = "kakeya_v1_4_snapshot.plugin:register_plugin"
